2007-09-12  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/view.py (_init_props):
	Enable rubber-banding.

2007-09-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/gaupol.gtk.conf.spec:
	Remove search.patterns and search.replacements.

	* gaupol/gtk/dialogs/search.py:
	Save search history to $HOME/.gaupol/search instead of the
	configuration file to avoid quoting problems.

2007-09-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn.common-error.in:
	Add quotation marks and apostrophes at the ends of lines to the
	"Spaces before punctuation marks" pattern.

2007-09-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/preview.py (preview):
	Raise gobject timeout to 500 ms.

2007-09-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/codes/iso_3166.xml:
	Update from iso-codes 1.4.

2007-09-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/gaupol.gtk.conf.spec:
	* data/glade/text-assistant-line-break-options-page.glade:
	* gaupol/agents/text.py:
	* gaupol/gtk/assistants/text/line.py:
	Add more detailed line-break skip conditions.

2007-09-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn-en.line-break.in:
	* data/patterns/Latn.line-break.in:
	Allow "Clauses" patterns to end in $.

2007-09-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/text.py (break_lines):
	Fix post-break reduction check.

2007-09-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/gaupol.gtk.conf.spec:
	Add line_break section.

	* data/glade/text-assistant-line-break-options-page.glade:
	* data/glade/text-assistant-line-break-page.glade:
	* gaupol/gtk/assistants/text/line.py:
	New files for a text assistant line-break task.

	* gaupol/gtk/assistants/text/assistant.py:
	Allow non-task pages and add line-break pages.

	* gaupol/gtk/assistants/text/page.py (correct_texts):
	Remove method as it is not used by all pages.

	* gaupol/gtk/ruler.py (get_length_function):
	New function to replace former useless "func".

2007-09-06  Osmo Salomaa  <otsaloma@cc.hut.fi>
